--- a/index.html
+++ b/index.html
@@ -10,34 +10,89 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body >
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+<main >
   
-  Summary
 
-  Reaction
-  80 / 100
+  <div class="main-section">
 
-  Memory
-  92 / 100
+    <div class="results-section grid-flow" >
+      
+      <h1 class="result-title">Your Result</h1>
+      <p class="score">
+        <span>76</span>
+        of 100
+      </p>
+      <div class="grid-flow">
+        <p class="result-details">Great</p>
+        <p>You scored higher than 65% of 
+        the people who have taken these
+        tests.</p>
+      </div>
+    </div>
+    <div class="summary-section grid-flow" >
+      <h2 class="summary-tittle">Summary</h2>
+      <div class="grid-flow">
+        <div class="summary-item summ1">
+          <div class="group-flex">
+            <img src="./assets/images/icon-reaction.svg" alt="Icon for Reaction" class="summary-icon">
+            <h3 class="summary-item-tittle">Reaction</h3>
 
-  Verbal
-  61 / 100
+          </div>
+          <p class="summary-score">
+            80 <span> / 100</span>
 
-  Visual
-  72 / 100
+          </p>
 
-  Continue
+        </div>
+        <div class="summary-item summ2">
+          <div class="group-flex">
+            <img src="./assets/images/icon-memory.svg" alt="Icon for Memory" class="summary-icon">
+            <h3 class="summary-item-tittle">Memory</h3>
+
+          </div>
+          <p class="summary-score">
+            92<span> / 100</span> 
+
+          </p>
+
+        </div>
+        <div class="summary-item summ3">
+          <div class="group-flex">
+            <img src="./assets/images/icon-verbal.svg" alt="Icon for Verbal" class="summary-icon">
+            <h3 class="summary-item-tittle">Verbal</h3>
+
+          </div>
+          <p class="summary-score">
+            61 <span> / 100</span>
+
+          </p>
+
+        </div>
+        <div class="summary-item summ4">
+          <div class="group-flex">
+            <img src="./assets/images/icon-visual.svg" alt="Icon for Visual" class="summary-icon">
+            <h3 class="summary-item-tittle">Visual</h3>
+
+          </div>
+          <p class="summary-score">
+            72 <span> / 100</span>
+          </p>
+
+        </div>
+        <button class="button">Continue</button>
+      </div>
+
+    </div>
+  </div> 
   
+
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Kiruba Stanislaus</a>.
   </div>
+</main>
 </body>
 </html>
